# openline-core

./: README.md  TESTERS.md  pyproject.toml
.github/workflows/: acp-to-cole.yml  core-pages.yml  olr12-upgrade.yml  pages.yml  receipt-v15.yml  tuned-cap-test.yml  validate-olp.yml  validate.yml
adapters/: README.md  frame_builder.py  lean_frame_builder.py
adapters/frames/: frame_builder.py
docs/: ADOPTING_BIO_RECEIPTS.md  demo.html  example.frame.olp.json  index.html  receipt.latest.json
docs/components/: metrics-strip.js
docs/examples/: bio.receipt.example.json
examples/: build_frame_from_text.py  fs_lite.py  fs_lite.py.py  lean_frame_demo.py  quickstart.py  send_frame.py
integrations/langgraph/: README.md  openline_node.py
integrations/mcp/: README.md  client_example.py  mcp-tool.json  server_stub.py
learn/: calibrate.py  record.py  report.py
metrics/: kappa.py
openline/: digest.py  guards.py  pyproject.toml  schema.py
openline-core/scripts/: print_policy_hash.py
openline/adapters/: fastapi_app.py
openline/openline/: schema.py
openline/openline/adapters/: fastapi_app.py
policies/: policy.v1.yaml
receipts-kit/: deltaScale.js  openline-card.js
recipes/: structured-outputs.md  validate.py
recipes/schemas/: olp-frame.schema.json
schema/: bio.screening.v0.1.schema.json  receipt.v1.5.schema.json
schemas/: edge-block.schema.json  frame.schema.json  receipt.schema.json
schemas/vectors/: frame-min.json
scripts/: ingest_frame.py  test_tuned_cap.py  validate_v15.py
tests/: test_guards_v02.py
thresholds/: v0_2.json
