[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openline"
version = "0.1.0"
description = "Open Line Protocol (OLP) — shape-native messaging for AI agents with frozen schema, guards, 5-number digest + Δ_hol, and a one-command FastAPI demo."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "OpenLine Contributors" }]

# Core deps (schema + digest math)
dependencies = [
  "pydantic>=2.7.0",
  "networkx>=3.2"
]

[project.optional-dependencies]
server = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0"
]

[project.scripts]
olp-server = "openline.adapters.fastapi_app:main"

[tool.uv]
# usage:
#   uv sync --extra server
